Update dependencies in bun.lock and package.json
- Upgraded "drizzle-orm" to version 0.45.1 for improved ORM functionality.
- Added "pg" package version 8.18.0 for PostgreSQL support.
- Introduced "@types/pg" version 8.16.0 for TypeScript type definitions.
- Updated "drizzle-kit" to version 0.31.9 for enhanced features.
- Updated various "@esbuild" packages to version 0.25.12 for better compatibility and performance.

--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.35.3",
+    "drizzle-orm": "0.45.1",
     "dub": "0.71.4",
     "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "16.0.10",
@@ -180,6 +180,7 @@
     "next-themes": "^0.4.6",
     "next-video": "^2.6.0",
     "nuqs": "^2.8.5",
+    "pg": "8.18.0",
     "postgres": "^3.4.7",
     "posthog-js": "^1.306.2",
     "posthog-node": "^4.18.0",
@@ -212,6 +213,7 @@
     "@types/bun": "^1.3.4",
     "@types/hls.js": "^1.0.0",
     "@types/node": "^22.19.3",
+    "@types/pg": "8.16.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
@@ -221,7 +223,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.26.2",
+    "drizzle-kit": "0.31.9",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-jsdoc": "^50.8.0",
