--- a/package.json
+++ b/package.json
@@ -120,6 +120,9 @@
     "@react-email/components": "^0.0.35",
     "@react-email/render": "^1.4.0",
     "@sentry/nextjs": "^10.30.0",
+    "@stripe/connect-js": "3.3.34",
+    "@stripe/react-connect-js": "3.3.33",
+    "@stripe/stripe-js": "8.8.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/core": "^3.13.0",
@@ -180,6 +183,7 @@
     "next-themes": "^0.4.6",
     "next-video": "^2.6.0",
     "nuqs": "^2.8.5",
+    "p-retry": "7.1.1",
     "pg": "8.18.0",
     "postgres": "^3.4.7",
     "posthog-js": "^1.306.2",
