--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "react-cookie-manager": "^3.8.2",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-error-boundary": "6.1.1",
     "react-hook-form": "^7.71.0",
     "react-markdown": "^9.1.0",
     "remark-gfm": "^4.0.1",
