Enhance database configuration and calendar integration features
- Updated `drizzle.config.ts` to include new `entities` configuration for roles with Neon provider.
- Added `db:push` command to `package.json` for database schema synchronization.
- Enhanced `drizzle/schema.ts` with reusable RLS policies for organization and role management, improving security and access control.
- Refactored calendar integration components to replace Google Calendar references with a more generic calendar connection approach, including updates to the expert setup checklist and dashboard.
- Removed deprecated Google Calendar connection component and related logic, streamlining calendar integration handling.
- Updated various components to reflect the new calendar connection terminology and improve user experience during setup.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "type-check": "tsc --noEmit",
     "// ========== DATABASE (Drizzle ORM) ==========": "",
     "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "// ========== TESTING (Vitest) ==========": "",
